--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -9,17 +9,18 @@ http://ionicframework.com/docs/theming/ */
 }
 
 .gradient-secondary {
-  background: linear-gradient(
-    45deg,
-    var(--ion-color-secondary),
-    var(--ion-color-tertiary)
-  );
+  background: linear-gradient(45deg,
+      var(--ion-color-secondary),
+      var(--ion-color-tertiary));
 }
+
 .custom-tabbar {
-    overflow: visible !important;
-    position: relative; /* necesario para que el botón flotante se posicione bien */
-    z-index: 99;
-  }
+  overflow: visible !important;
+  position: relative;
+  /* necesario para que el botón flotante se posicione bien */
+  z-index: 99;
+}
+
 .gradient-dark {
   background: linear-gradient(45deg, #2c3e50, #3498db);
 }
@@ -30,11 +31,9 @@ http://ionicframework.com/docs/theming/ */
 
 /* Clase para texto con gradiente */
 .text-gradient {
-  background: linear-gradient(
-    45deg,
-    var(--ion-color-primary),
-    var(--ion-color-secondary)
-  );
+  background: linear-gradient(45deg,
+      var(--ion-color-primary),
+      var(--ion-color-secondary));
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -75,12 +74,10 @@ ion-tab-button.tab-selected ion-label {
   left: -75%;
   width: 50%;
   height: 120%;
-  background: linear-gradient(
-    120deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.15) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
+  background: linear-gradient(120deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0.15) 50%,
+      rgba(255, 255, 255, 0) 100%);
   transform: skewX(-20deg);
   animation: shimmer 4s infinite;
   pointer-events: none;
@@ -91,9 +88,11 @@ ion-tab-button.tab-selected ion-label {
 input:-webkit-autofill,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:hover {
-    -webkit-box-shadow: 0 0 0 30px rgba(247, 247, 247, 0.64) inset !important;
-    -webkit-text-fill-color: rgb(58, 55, 55) !important;
+  -webkit-box-shadow: 0 0 0 30px rgba(247, 247, 247, 0.64) inset !important;
+  -webkit-text-fill-color: rgb(58, 55, 55) !important;
 }
+
+
 @keyframes shimmer {
   0% {
     left: -75%;
